<?php

namespace App\Domain\LabResults\Exception;

/**
 * Base de todas las violaciones a reglas de negocio del módulo.
 */
abstract class DomainRuleException extends \RuntimeException
{
}
